fix(cli): address review comments on --network=dev deprecation
- NetworkDeprecationMessage.generate() now accepts a framed boolean so
  structured log formats (GCP, ECS, etc.) get a compact semicolon-
  separated single line instead of ASCII-art; BesuCommand passes
  isPatternLayoutActive() to select the right rendering
- Fix unclosed InputStream in ProcessBesuNodeRunner when loading dev.json;
  add null guard for missing resource
- Move CHANGELOG entry to Unreleased > Breaking Changes with wording that
  reflects the hard failure (not a soft deprecation)
- Add NetworkDeprecationMessageTest cases asserting framed and compact
  rendering of the DEV deprecation message

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>
Signed-off-by: Sally MacFarlane <macfarla.github@gmail.com>