@@ -19,31 +19,56 @@ import org.hyperledger.besu.util.log.FramedLogMessage;
 
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /** The Network deprecation message. */
 public class NetworkDeprecationMessage {
   private NetworkDeprecationMessage() {}
 
   /**
-   * Generate deprecation message for specified testnet network.
+   * Generate deprecation message for specified testnet network, using a framed ASCII-art block
+   * suitable for plain/pattern log layouts.
    *
    * @param network the network
    * @return the deprecation message for specified network
    */
   public static String generate(final NetworkDefinition network) {
+    return generate(network, true);
+  }
+
+  /**
+   * Generate deprecation message for specified testnet network.
+   *
+   * @param network the network
+   * @param framed true for a framed ASCII-art block (plain/pattern layouts); false for a compact
+   *     semicolon-separated single line suitable for structured log formats (GCP, ECS, etc.)
+   * @return the deprecation message for specified network
+   */
+  public static String generate(final NetworkDefinition network, final boolean framed) {
     if (network.getDeprecationDate().isEmpty()) {
       throw new AssertionError("Deprecation date is not set. Cannot print a deprecation message");
     }
 
-    if (network.getDeprecationMessage().isPresent()) {
-      return FramedLogMessage.generate(
-          Arrays.asList(network.getDeprecationMessage().get().split("\n")));
+    final List<String> lines =
+        network
+            .getDeprecationMessage()
+            .<List<String>>map(msg -> Arrays.asList(msg.split("\n")))
+            .orElseGet(
+                () ->
+                    List.of(
+                        network.normalize()
+                            + " is deprecated and will be shutdown "
+                            + network.getDeprecationDate().get()));
+
+    if (!framed) {
+      return lines.stream()
+          .map(String::strip)
+          .filter(l -> !l.isEmpty())
+          .collect(Collectors.joining("; "));
     }
 
-    return FramedLogMessage.generateCentered(
-        List.of(
-            network.normalize()
-                + " is deprecated and will be shutdown "
-                + network.getDeprecationDate().get()));
+    return network.getDeprecationMessage().isPresent()
+        ? FramedLogMessage.generate(lines)
+        : FramedLogMessage.generateCentered(lines);
   }
 }
